fix: spacing correction

--- a/packages/core/src/components/link/link-vars.scss
+++ b/packages/core/src/components/link/link-vars.scss
@@ -35,6 +35,6 @@
 tds-link {
   tds-icon {
     padding-bottom: 4px;
-    padding-left: 8px;
+    padding-left: 5px;
   }
 }
